[metadata]
name = blog
version = 2015.1.1
summary = Blog Project
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = https://launchpad.net/blog
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Openstack Blog Team
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    blog

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    blog-server = blog.cmd.launch:main
    blog-db-manage = blog.db.sqlalchemy.migration.cli:main

blog.actions =
    std.async_noop = blog.actions.std_actions:AsyncNoOpAction
    std.noop = blog.actions.std_actions:NoOpAction
    std.fail = blog.actions.std_actions:FailAction
    std.echo = blog.actions.std_actions:EchoAction
    std.http = blog.actions.std_actions:HTTPAction
    std.blog_http = blog.actions.std_actions:BlogHTTPAction
    std.ssh = blog.actions.std_actions:SSHAction
    std.email = blog.actions.std_actions:SendEmailAction
    std.javascript = blog.actions.std_actions:JavaScriptAction
